--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9292
-
+spring.data.web.pageable.default-page-size=2
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parfums?serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=password
