--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parfums?serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
